blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
      version: blue
  template:
    metadata:
      labels:
        app: django-app
        version: blue
    spec:
      containers:
        - name: django
          image: vinnymelato/messaging_app:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
