green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
      version: green
  template:
    metadata:
      labels:
        app: django-app
        version: green
    spec:
      containers:
        - name: django
          image: vinnymelato/messaging_app:1.1   # updated version
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
