kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
spec:
  selector:
    app: django-app
    version: blue      # start with blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
